[gd_scene load_steps=9 format=3 uid="uid://dtt82iplu4tbf"]

[ext_resource type="PackedScene" uid="uid://bn0gt0cet5en7" path="res://map.tscn" id="1_13pb2"]
[ext_resource type="Script" path="res://main.gd" id="1_w610o"]
[ext_resource type="PackedScene" uid="uid://qyykmt7nccm8" path="res://player2.tscn" id="3_ce216"]
[ext_resource type="AudioStream" uid="uid://j24r0nmcd0kp" path="res://Asset/Suara Kuntilanak.mp3" id="4_h6f7l"]
[ext_resource type="PackedScene" uid="uid://c1t23hqlqnbbg" path="res://ujan.tscn" id="4_ppuw4"]
[ext_resource type="AudioStream" uid="uid://bx4q1pfri4a50" path="res://Asset/mysterious-forest-creepy-lofi-halloween-lofi-halloween-music-168238.mp3" id="5_52fqi"]
[ext_resource type="PackedScene" uid="uid://bquey3pxd63l5" path="res://setan.tscn" id="6_gj1n1"]
[ext_resource type="PackedScene" uid="uid://c3dqxgdcbhd0i" path="res://main_menu.tscn" id="8_x4r36"]

[node name="Main" type="Node2D"]
script = ExtResource("1_w610o")

[node name="map" parent="." groups=["Setan"] instance=ExtResource("1_13pb2")]

[node name="player2" parent="." instance=ExtResource("3_ce216")]
position = Vector2(571, 506)

[node name="Camera2D2" type="Camera2D" parent="player2"]
position = Vector2(17, -172)

[node name="ujan" parent="player2/Camera2D2" instance=ExtResource("4_ppuw4")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_h6f7l")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_52fqi")
autoplay = true

[node name="setan" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(-651, 161)

[node name="setan3" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(-446, -171)

[node name="setan2" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(659, -146)

[node name="setan4" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(643, -534)

[node name="setan5" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(1110, -449)

[node name="setan7" parent="." instance=ExtResource("6_gj1n1")]
position = Vector2(816, -830)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("8_x4r36")]

[node name="Score" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Your Score"

[node name="previousScore" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Previous Score"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_entered" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_tree_entered"]
[connection signal="tree_exiting" from="AudioStreamPlayer2D" to="player2" method="_on_audio_stream_player_2d_tree_exiting"]
[connection signal="tree_entered" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_tree_entered"]
[connection signal="tree_exiting" from="AudioStreamPlayer2D2" to="player2" method="_on_audio_stream_player_2d_tree_exiting"]
